--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -23,11 +23,7 @@
         Questo non e' un sito di streaming generico e non e' a scopo di lucro. <br>
         Per qualsiasi problema contattatemi e cancellero' immediatamente il sito e i suoi contenuti
     </h3>
-    <h3 style="margin-bottom: 100px;"><a class="c" href="DMCA.html">DMCA/REMOVAL - TAKEDOWN - C&D CLICK HERE</a></h3>
-
-
-    <h1 class= "a" style=" margin-top: 35px; margin-bottom: 35px;"> Proprio per copyright molti (la maggior parte) degli episodi sono stati rimossi ma non temete: Rimane il download di tutta la serie!</h1>
-
+    <h3 style="margin-bottom: 10px;"><a class="c" href="DMCA.html">DMCA/REMOVAL - TAKEDOWN - C&D CLICK HERE</a></h3>
 
     <h2><a class="a" href="Intro.html">DC Super Hero Girls (2019) - Sigla ITA </a></h2>
 
@@ -37,7 +33,6 @@
         <a class="a" href="S1Ep2.html"> 1x02 - Nuove amicizie - parte 2</a><br>
         <a class="a" href="S1Ep3.html"> 1x03 - Nuove amicizie - parte 3</a> <br>
         <a class="a" href="S1Ep4.html"> 1x04 - Nuove amicizie - parte 4</a> <br>
-        FUNZIONANO FIN QUI <br>
         <a class="a" href="S1Ep5.html"> 1x05 - Piccole vittorie </a> <br>
         <a class="a" href="S1Ep6.html"> 1x06 - La rivale di Diana</a> <br>
         <a class="a" href="S1Ep7.html"> 1x07 - L'invasione dei coniglietti</a> <br>
@@ -88,10 +83,10 @@
         <a class="a" href="S1Ep52.html"> 1x52 - La principessa della fiera - parte 2</a> <br>
     </h3>
 
-    <h1 style="margin-bottom: 9px;">DOWLOADS</h1>
-    <h2 style="margin-bottom: 9px;">Piccola sezione per chiunque volesse scaricare la serie</h2>
-    <h3><a class="a" style="margin-bottom: 3px;" href="https://drive.google.com/file/d/13AJFijWHfoxvs_WtHVTda0LA0vulg3FQ/view?usp=sharing"> STAGIONE 1</a></h3>
-    <h3><a class="a" style="margin-bottom: 50px;" href="https://drive.google.com/file/d/1tJLn9GbEGwOPyJgqDNQ-Nz-lHvaNHBdD/view?usp=drive_link"> STAGIONE 2</a></h3>
+    <h1 style="margin-bottom: 6px;">DOWNLOADS</h1>
+    <h2 style="margin-bottom: 6px;">Piccola sezione per chiunque volesse scaricare la serie</h2>
+    <h3><a class="a"  href="https://drive.google.com/file/d/13AJFijWHfoxvs_WtHVTda0LA0vulg3FQ/view?usp=sharing"> STAGIONE 1</a></h3>
+    <h3><a class="a" style="margin-bottom: 6px;" href="https://drive.google.com/file/d/1tJLn9GbEGwOPyJgqDNQ-Nz-lHvaNHBdD/view?usp=drive_link"> STAGIONE 2</a></h3>
 
 
 </body>
