--- a/DCvideos/Intro.html
+++ b/DCvideos/Intro.html
@@ -15,7 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>DC Super Hero Girls (2019) - Sigla ITA</h1>
-                <iframe src="https://drive.google.com/file/d/1h1vddtHd8g0pXoKnDuEREn9duL1-5cXe/preview" width="640" height="480" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/1jCjdXEvl5pe6zFWKT9TDznciOLGJB0Tg/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
 </body>
 
 </html>
