--- a/index.html
+++ b/index.html
@@ -32,14 +32,11 @@
     <div class="centered-box hidden">
         <h1>CHI (O COSA) E' RUFUS?</h1>
         <p>
-            Piacere, io sono <a class="b" href="rufus.html">Rufus</a>, un
-            ragazzo dell'Abruzzo che ha sviluppato questo sito web per noia.
-            Lo scopo principale è condividere i miei progetti ed interessi
-            con chi ne è interessato e dare un punto di riferimento per
-            tutti i miei
+            Piacere, io sono <a class="b" href="rufus.html">Rufus</a>, un ragazzo dell'Abruzzo e ho sviluppato questo sito web per combattere la noia. Il mio obiettivo principale è condividere i miei progetti e interessi con chiunque sia interessato, oltre a fornire un punto di riferimento per tutti i miei 
             <a href="#social-icons" class="scroll-to-social">social</a>.
         </p>
-        <p>Per qualsiasi domanda contattatemi 🤍</p>
+        <p>Se avete domande, non esitate a contattarmi 🤍
+        </p>
     </div>
 
     <h1 style="margin-bottom: 5px;">PROGETTI</h1>
