--- a/mc.html
+++ b/mc.html
@@ -24,12 +24,11 @@
     <h1 style="margin-bottom: 7px;"><a class="b" href="index.html">PAGINA PRINCIPALE</a></h1>
         <h1  style="margin-bottom: 10px;">Download Minecraft Texture</h1>
         <a class="a" href="https://drive.google.com/file/d/1GUxktJOUQapFYd-btURE5onupsAg1o-2/view?usp=sharing"> <img class="pfp" style="margin-bottom: 30px;" src="Image.Videos/mc/mc.png" alt="DOWNLOAD"></a></h3>
-    <h3 style="margin-bottom: 30px;">Vi basterà clickare sull'immagine per andare al file sul Drive di google ed iniziare il Download in alto a destra!</h3>
-    <h3>Funziona su quasi qualsiasi versione anche se potrebbe dirvi il contrario</h3>
-    <h3 style="margin-bottom: 30px;">(si consiglia di utilizzare la Optifine per avere più funzionalità)</h3>
+    <h3 style="margin-bottom: 30px;">Vi basterà cliccare sull'immagine per accedere al file su Google Drive e iniziare il download in alto a destra!</h3>
+    <h3>Funziona su quasi tutte le versioni, anche se potrebbe indicare diversamente</h3>
+    <h3 style="margin-bottom: 30px;">(si consiglia di utilizzare Optifine per avere più funzionalità)</h3>
 
-    <h1>Perchè usare la texture di Rufus?</h1>
-    <h2 style="margin-bottom: 25px;">Perchè dentro ha un po' di tutto:</h2>
+    <h1 style="margin-bottom: 20px;">Cosa offre di unico la texture di Rufus?</h1>
 
     <h3 style="margin-bottom: 10px;"> A partire da un'interfaccia più pulita</h3>
     <img class="mc" style="margin-bottom: 20px;" src="Image.Videos/mc/interfaccia.png" alt="Interfaccia">
@@ -52,7 +51,7 @@
     <h3 style="margin-bottom: 30px;">Per rendere Minecraft un'esperienza unica</h3>
 
 
-    <h5 style="margin-bottom: 30px;">Note: la texture è in continua (ma non costante) evoluzione, si prega di verificare ogni quando è stata aggiornata con nuove features <br> Ultimo aggiornamento: 27/03</h6>
+    <h5 style="margin-bottom: 30px;">Nota: la texture è in continua (ma non costante) evoluzione. Si prega di verificare periodicamente per nuovi aggiornamenti. <br> Ultimo aggiornamento: 27/03/2024</h6>
     
 
 
