--- a/rufus.html
+++ b/rufus.html
@@ -20,9 +20,9 @@
         <h1 style="margin-bottom: 7px;"><a class="b" href="index.html">PAGINA PRINCIPALE</a></h1>
         <h1  style="margin-bottom: 10px;">Approfondimenti su mitico Rufus</h1>
         <h1 style="margin-bottom: 10px;"><p id="AutoType1"></p></h1>
-        <h3>Questa pagina è necessario poiché potreste imbattervi in un Rufus in una grande varietà di forme e dimesioni!</h3>
+        <h3>Questa pagina è fondamentale, poiché potreste incontrare un Rufus in una vasta gamma di forme e dimensioni!</h3>
         <h3>Vi guiderò alla scoperta di questa mistica creatura:</h3>
-        <h3  style="margin-bottom: 5px;">queste sono le mie pfp più comuni che cambio in base al periodo</h3>
+        <h3  style="margin-bottom: 5px;">Ecco le mie pfp (foto profilo) più comuni, che cambio in base al periodo.</h3>
         <h6  style="margin-bottom: 15px;">(Discord e' un caso a parte)</h6> <br>
         <div class="image-container">
             <div class="image-wrapper">
@@ -106,7 +106,7 @@
             
         </table>
 
-        <h3 style="margin-bottom: 15px;">Ci sarebbe ancora molto da dire... se avete voglia siete liberi di chiedere su Discord</h3>
+        <h3 style="margin-bottom: 15px;">Ci sarebbe ancora molto da dire... se avete voglia siete liberi di chiedere su Discord<3</h3>
 
         <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px;";>
             <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
@@ -128,7 +128,7 @@
                 }
                 type();
             }
-            typeWriter("Chi più di me?", "AutoType1", 100);
+            typeWriter("'Chi più di me?'", "AutoType1", 100);
         </script>
 </body>
 
