--- a/DCvideos/S1Ep12.html
+++ b/DCvideos/S1Ep12.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Scontro al museo</h1>
-                    <iframe width="1200" height="800" src="https://d1vjgq82aec6f4.cloudfront.net/h66dsz%2Ffile%2F51b47ae5efca2aab02fe7386163131d2_2c168d07c16c4caad24545ef697ee28c.mp4?response-content-disposition=inline%3Bfilename%3D%2251b47ae5efca2aab02fe7386163131d2_2c168d07c16c4caad24545ef697ee28c.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713220402&Signature=RCLpemCswSNz3CNuJtYtJx~WW1JERU2gaKVrFAD6I-jzc2bIkbTDUSdrycOmleUM-f4Aqo3Qo1sUOI0B~Hw~2ynjl1yD3iZr0infmoyXfVrvDzVW-PDGaXsRGIHzebUOQztsVIJ70XaEgzq12pbVHupmQ21FcXKKEhcluKoMLw3q2jebjgC~ow89oUrkJy0P6YpT08EeuVOxPcv116MN~sPb~88pe9ZwS-NsP-9oiT0evg4OcUz6i4cm4iSleF0R659WpAhiS1t~BXjrRvY7yPLd55iS7rDr2dzyjuKf-Lh9PCjf4jieQ6olV5Yt~xd0rjUzHELYnNpFlhXtw3h0FQ__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1quVDzfzsPX_pv8GuYSG7obJs1KZfvOBk/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep13.html">1x13 - La prima cotta</a></h1>
 </body>
 
