--- a/DCvideos/S1Ep13.html
+++ b/DCvideos/S1Ep13.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La prima cotta</h1>
-                    <iframe width="1200" height="800" src="https://d3ar994fg9cegc.cloudfront.net/d53esz%2Ffile%2F43bb48f86b726e77bd7476339c21b4f6_e238d66131ee199ae7f357880cb0f25d.mp4?response-content-disposition=inline%3Bfilename%3D%2243bb48f86b726e77bd7476339c21b4f6_e238d66131ee199ae7f357880cb0f25d.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713220428&Signature=Yz-BPQKpfdoJTxxCydrUlTeLgji7-B0HltDE4BZpJtHH13oTtja8Xl90lcm4J7vrs~JREeUavF6Ja6UHld9VgXruqVwuEJ6TvVwnSA9aS5y0kkf4h02l6wSTddM6LHRjMzqUe~OZntA0t6TmGJYRNF4DhRCQohJoKeJpL-1Q44w0MInb33FO2CkmCLqP4FSBPAAbShKoj7MoCdjkn5ygv2gTCfuINKlJ2JtoOIZCpTDPJiMJzpifk5X5rz9FnXJO0S~Xy3xwhDtEqQNwD97kXwi4orhC2ioy5HbKfLu5tfZELq0dEWGLMYdOKWkgoi-rCWfylxPL0b7o2o3IEAxRdg__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1Qso758NRR4Cq0-Mnl6RAX-IYo0RWmpZy/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep14.html">1x14 - Vera magia</a></h1>
 </body>
 
