--- a/DCvideos/S1Ep14.html
+++ b/DCvideos/S1Ep14.html
@@ -15,9 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Vera magia</h1>
-                    <iframe width="1200" height="800" src="https://d1slky1s14skwk.cloudfront.net/t1yesz%2Ffile%2Fd2fd5bf7f042166c9be3c999d4b77aa7_2dd7411088bbb165e5326e1491245f9f.mp4?response-content-disposition=inline%3Bfilename%3D%22d2fd5bf7f042166c9be3c999d4b77aa7_2dd7411088bbb165e5326e1491245f9f.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713220446&Signature=MvbxOLK8iagtiBNUAXb1LndKKQJo7v-cTvn-abMvbB0Ubp~LC7exQfQ5jJG0Ksel-nobiSVns6JFFFSQfOhMFD~lietaF6szwQEX0dIBqv3C6ukjpbk1R4mWiwdwNCTQwcOPpGWFrYoQA2cpItDolNkw5OlKrQCj-Nw-E-F9FXRjwdChNUMlqgWOFNxKiVfkMimEDk9lvBhPD2V3V52LkLnzQ5uprG9VEX7OJtugH76XewQXB~3bCPM2VI8uybZQhRhnRrVL2QdUNu5EaM7tIxG7iSf1e5r7dAJmGDDJBSim3dgk91Ekd-fY5SR572rcK6SspziD-iYNwIVUWsfUig__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
-                <h1><a class="a" href="S1Ep15.html">1x15 - Super Hero Boys - parte 1</a></h1>
+                <iframe src="https://drive.google.com/file/d/13ZZACu5-yRBGBWWvl49J38Mh4wAZG1Hc/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>               <h1><a class="a" href="S1Ep15.html">1x15 - Super Hero Boys - parte 1</a></h1>
 </body>
 
 </html>
