--- a/DCvideos/S1Ep17.html
+++ b/DCvideos/S1Ep17.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La convention</h1>
-                    <iframe width="1200" height="800" src="https://d3nufjf9r8ynx5.cloudfront.net/z9bhsz%2Ffile%2F8ee28c27d738dcd9e3085774505d69d0_206584e48b0ff364346b357f7028a809.mp4?response-content-disposition=inline%3Bfilename%3D%228ee28c27d738dcd9e3085774505d69d0_206584e48b0ff364346b357f7028a809.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713220511&Signature=I0XwbJT8KEZsscc6Nhc6isTFXvu7JlXlGvt2rzTn6EyrhpWnL5GKye~aPCjAnqhCIBXikaenF-u96cHIXfg4ICroYlGPDwkJ6qpnCqSkEymZmwbc0KrGAbi0WLo5x3y8LhNZ~9nkezANPKtYO4YJQYmFKP5C6eiUQt1C-NC4r23C6KWxqLQf486F9VYc556UXntO6Mzf5Yrs6NTU34q4X3Okk6IZ1aRB-4lLoYZkl-YRP4~4MhXvr19ji7SHWk-Eb7TxzgLo1qoWN8FiEdXrEeOdQFd7Bj3WuGXxo7M0Si0mq97Qio16-irjJEb50u9AZqJyde8IvEzmM7lQ3qvdJg__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/18eOBLKJ62RzGkGHmKDZ2qu2mTOcFpmKt/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep18.html">1x18 - Amiche nemiche</a></h1>
 </body>
 
