--- a/DCvideos/S1Ep18.html
+++ b/DCvideos/S1Ep18.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Amiche nemiche</h1>
-                    <iframe width="1200" height="800" src="https://d2gmxft35na058.cloudfront.net/s96isz%2Ffile%2Fc766bf8ab665b0f8c79643bded191a52_d8059b863c6077b9e85a41ecd113440d.mp4?response-content-disposition=inline%3Bfilename%3D%22c766bf8ab665b0f8c79643bded191a52_d8059b863c6077b9e85a41ecd113440d.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713220542&Signature=PiKKqS2jpBpuavOKQyUdwof5lXoH8ymMWLYlvZP2FejOBCRUIcl5hTRMADMqX-dRwbDGwXQJiJ6M0ZD0JdZhJirboajFHNv06Cjf2KGwqlfjb6fuxZFaWNJRKe4u-JMucxJTxvr0fBgsZiGthGIBbp9GmR7bp4SYNRlSgxsFZ2vgH-Q2YB5P9U95enzZl1nnRDKcnNyaa4LXvJTEU0Lv39OTjMb1GrLWWt6n0a3y0Jq72cjtU8WQe4JNUc7s8nHCC2MplT~kvMIrCQDVlSOogQGA4KbrNROggVP4yG~XKbnldpsRorY8fiPcN99HbhB0fnO7YADP1aSwYjEcKAb8Mg__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1x3ggXxCyAg4ZiKfLP_Fpg0uSDKVGP03P/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep19.html">1x19 - Il litigio - parte 1</a></h1>
 </body>
 
