--- a/DCvideos/S1Ep19.html
+++ b/DCvideos/S1Ep19.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Il litigio - parte 1</h1>
-                    <iframe width="1200" height="800" src="https://d18rz709ywjgt6.cloudfront.net/a91jsz%2Ffile%2Fd2046e48d17a2dd6542546b02e9a5bbc_a931ecaca606954058f9b08570674515.mp4?response-content-disposition=inline%3Bfilename%3D%22d2046e48d17a2dd6542546b02e9a5bbc_a931ecaca606954058f9b08570674515.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713220562&Signature=TuSFSq9yHtM0JJE8k6VrvFROEHuEANgi7Jfm0svHK~26T05NSbAEn9zSY8RT5gpBqPCKjJFE1KSuRs8UPVh5EyniJeu8B-YNgaEti0y3f5h-Vow3oXZtFgXo6qcuzsW6jzN5V1QmWcbuUwzYyFX-XJXyv~8F-vjFl20AOj9L3s8enFqAEGlluonikIYYT-o15mSxjMNc8bMEsHm5dskeq52Mu6Ump4NPrK6u5agPxVhTFXUv9jRn-TfX5X8CPl6ASgqNelMp6YzdmmESLxFdlt7HfOtYcTzkg2YtjFoM7IJK20EzFCIkEJGiVRcWGLC0Yxq3ua5yqhNgigjU18Fe0w__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1ioJu9JBr6kqMMTZiR8bPlSbiaOsXPa0m/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep20.html">1x20 - Il litigio - parte 2</a></h1>
 </body>
 
