--- a/DCvideos/S1Ep24.html
+++ b/DCvideos/S1Ep24.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Asso contro Krypto</h1>
-                    <iframe width="1200" height="800" src="https://d11yroxq8unnbt.cloudfront.net/t95osz%2Ffile%2Fa31bee75cb6b197c1a63b0a22615bbd5_0425fa431297490c67f2f32dc4fdc50f.mp4?response-content-disposition=inline%3Bfilename%3D%22a31bee75cb6b197c1a63b0a22615bbd5_0425fa431297490c67f2f32dc4fdc50f.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713220751&Signature=Rblp35Jp5AU1xNkTLasZiCwyQA5eB0LBc0AjQnmvdKHjVnSrkUJV850eRhJw-lgDXz9EGwzJ4aNAftKgG-NyDgPjDCchHU-sH3UGrPzclf22Tf9IBkGRXRzPRF9MkJBMc42X0o5GJMscNo9fabtW9aj3d-f5gho~S39vo9ZcdKVFXgBXx7cU3BOmih4qYxFXkao-xS3HldpssuC8iTy2JqUp3wtlEnag~dOycscOKNvjc59bs8UzJIXWTUjwl6CfFtkUFzN3~RyGn96ouxB2h5puMU0rVwZy6lP4jfBbnfqiNl9Vs5jcpQCNUwGGUps6Z0jQQaxF~Ee5NFziHuxAgQ__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1QdZFBuwvXFRMVxfEjS_gXRmKXN1rUNBi/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep25.html">1x25 - Anime gemelle - parte 1</a></h1>
 </body>
 
