--- a/DCvideos/S1Ep25.html
+++ b/DCvideos/S1Ep25.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Anime gemelle - parte 1</h1>
-                    <iframe width="1200" height="800" src="https://d2j573v2dl06b0.cloudfront.net/v7bpsz%2Ffile%2F62b1d0261cb33e590827527468a5e922_a27d23a7d6eb267c18ed22b6b9ef0ad0.mp4?response-content-disposition=inline%3Bfilename%3D%2262b1d0261cb33e590827527468a5e922_a27d23a7d6eb267c18ed22b6b9ef0ad0.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713220769&Signature=RMR3TtRllBBS0zvkJufvvWE4AvCKVZHDNIVZ36XdLznIf2E-q6012xDlxd9x0Mjx37NQfGIPDC9i1fIg5ZzzeqSqhD4DoGEac0fLNTGEUbrRgZqFZqm23gnRh0jKOpU~u2ezUs3p4xc~Etlei~P1p2Opm1EVFAR33XjrAggf~kRDgzW2YSJyj43gDLP-CmmPfdx9dvSbxGDImKCLzpGjllgohJ0LiweTzOyDZ5JNWEx6BGR5pck~qMbyVefqylptewpvARTrXPh4BKautxskaRCIeMYDq3MUjUuUxTVSmu~AgBvy4-B1DrOpiq2YZkiE87P0qLa4yjI-V1J0~JgZog__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1GInYp-vX6U-7exCuAjoxTuqBVH44YUDy/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep26.html">1x26 - Anime gemelle - parte 2</a></h1>
 </body>
 
