--- a/DCvideos/S1Ep27.html
+++ b/DCvideos/S1Ep27.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>I Tween Titans</h1>
-                    <iframe width="1200" height="800" src="https://d1bdhlpvv2677c.cloudfront.net/r3s520%2Ffile%2Fd4f4f5f0826fb49c60f2c3340597781f_5517e1e428fd2fa767eae739aec00a8b.mp4?response-content-disposition=inline%3Bfilename%3D%22d4f4f5f0826fb49c60f2c3340597781f_5517e1e428fd2fa767eae739aec00a8b.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713232809&Signature=UOX57oNoqk3NKNMZkz9Arudv49~tQHbCjvJ8xlsGpj~R18c6z9wBrr6bCmmRnXgXhqIuipayahZ03rHcTZXvv-ct0Dv9EDf4i26ezq1bhosNCeM79CP-s~XFW4W6tvMI7BVjlb-VkFVJtTwjlt4kmRyfy5JYuH12G0KuzmytOpawLp87CnVf0d0ioBAomn7QXUnnC0few2rglXwhBBJN0NKzVVHoqUqJxi~ZBz7hCT3OrfdT-BdvHeznSNtjWsUpAUr~MOEkLZoa4HdNeiyHkx-XQ8NPyk9nCa~kzzVhB9YnM~YKcfoX85cO3s6n7CTpdNf8hgzi7QI~MCqk1Qz3ow__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1VaW3O23yDmI9hyPgvczbPDanbAjlbOoZ/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep28.html">1x28 - Una gemella imperfetta</a></h1>
 </body>
 
