--- a/DCvideos/S1Ep28.html
+++ b/DCvideos/S1Ep28.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Una gemella imperfetta</h1>
-                    <iframe width="1200" height="800" src="https://d2rl4adw3gn8l7.cloudfront.net/w7i620%2Ffile%2F5e2debaeef290eb320d6428aab026283_0002cec12283e82629c66894c52aa7ab.mp4?response-content-disposition=inline%3Bfilename%3D%225e2debaeef290eb320d6428aab026283_0002cec12283e82629c66894c52aa7ab.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713232832&Signature=CsF2Z7ostAaSjgb4vDrf2mJ13SvMnJsnrh2T0h5rKI-Q6xUb9QXsaedwyyEnrIsNyxdof4U9hJ6M1PJ4HCtWUMQ8qxTSQgD58wcBO0mklxvrSeWSv0m~0XHyon0ZbMfSMmFMSjluOgXmQio2l9ezOLV0JT3Q8TNW6aITOxM4Vx19I7zWU1V81U12yNH8neF-BuJsG9NEPDY4Sp~aGUhxQUtELp7hsiNXXek3yKbWyFAt4n7q8WXZQVBYsLIUmgYpdfl-85MIiPdLmzXu3JoF~e04Sq7TGjHOgyPGB3UT~DnOv7Q1t79sQagrhPCWdOWSbjrvaKPhiYtsdHi~SJORhQ__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1uVBf21p8KPFJnu5cfFqJUL_OicrWHlqE/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep29.html">1x29 - Il passato di Zee</a></h1>
 </body>
 
