--- a/DCvideos/S1Ep31.html
+++ b/DCvideos/S1Ep31.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La strega del bosco</h1>
-                    <iframe width="1200" height="800" src="https://d8o2c393pu2d1.cloudfront.net/a26920%2Ffile%2Fe87321519efae23a67106676ca2a4a43_497409a6e3c55298f9a70e55e18247bf.mp4?response-content-disposition=inline%3Bfilename%3D%22e87321519efae23a67106676ca2a4a43_497409a6e3c55298f9a70e55e18247bf.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233086&Signature=PifWsFBRS4Gw8JrLqm6VmB4PdPXMbqD3fdu8axtiCoovbYJV~ohJUrIJ-LMCPRVC~wAQT4hrRhQjDcGvQmXY4wDSQCLqMgqcsV9t0CSrce355bEzoNoZy0lMUE9Mg0ZlbrqHSDnD97uNVfFz~Fq1nBRMNVIkJ0Qyu3qUFTkczfPRy5CaTOtg5m7hGWjIemn93xIaEYr6MudupYJBQgu-d2dlPaciO6HL41QGP2T1rGKMgFqmLGPa0NsJuCrOhICOWDsvy~CnxY8CE8FxG2AKGCjETEkMA7ACLdUpfKlt5syjYL4BQWXQwXMY3ii2j8nIWCNrPlc763SW-UV782hJcg__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1NOkZT71WZob23wtoOB-mKurhV7Vl0WAS/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep32.html">1x32 - La piu' grande paura di Zee</a></h1>
 </body>
 
