--- a/DCvideos/S1Ep34.html
+++ b/DCvideos/S1Ep34.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>L'esame di guida</h1>
-                    <iframe width="1200" height="800" src="https://d2j573v2dl06b0.cloudfront.net/v75c20%2Ffile%2Febad108155fa6f40d744d5333cbc4682_8762fa060c5fb57b507dd2b33de13c4c.mp4?response-content-disposition=inline%3Bfilename%3D%22ebad108155fa6f40d744d5333cbc4682_8762fa060c5fb57b507dd2b33de13c4c.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233210&Signature=K7MbzbHv4gcogqiYNVhlB23fZo52h2PUD6UzF2F6KVe-yOlCZVhDpfoLLA1ahJifZc6VI-sj3HpocrMTUdXI9NiMDOYTg7H4vbFFawT9TNMoElC2okOMnOrgnf--GcpHYW9H-6RBTyNT-EUcxpD7eEA0AYz8-OutfhiXnf1vgxrQkDFVjul~gI3E3yeNFxlsoCzu6tCJsvuSRy7M2VVETTcRqsLeDsisthZNN~TB~95eCWMtk-Twjm0OSzd772qktXRRxJPc1pg1ONy3G3in5qaijJDOlMWbQreez8A3OMaB3jTCrmCVdzj0oD-3XWKKWS10eyyCaOlisUwE9Tax4Q__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1c5i5vhTMnlBtPWxu8464gv7Lfj_x7Voy/preview" crolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep35.html">1x35 - Il potere della musica - parte 1</a></h1>
 </body>
 
