--- a/DCvideos/S1Ep42.html
+++ b/DCvideos/S1Ep42.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La nuova amica di Zee</h1>
-                    <iframe width="1200" height="800" src="https://d3li2vbp4mtkrw.cloudfront.net/y3hi20%2Ffile%2Fcecb31e30b5301377467f51145e83a26_d5f71806591b680c477cb43649741a0d.mp4?response-content-disposition=inline%3Bfilename%3D%22cecb31e30b5301377467f51145e83a26_d5f71806591b680c477cb43649741a0d.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233409&Signature=UJ3FmJki9fXxDtEWES9PekmkALt9d0Ky8f7fmqXqV2XTHNRu849qaQ~1JonqEj1ePJWBS7Yx38EReNvRN~04c~V4yiLYxH6JWCCVImtSkvT5bU08ZIj14zdQ1Rn3UW4FEWo3Zztq-rLVEwm2jaqvy8cxLF1QCKIq51S0c4qDqqDsPSd-~PfFKj5IzwhlY2OuCLwkK7Ba5tM9HNFjAuCrpcFD7zlnz7UlBj~UhPbYji30LGshurK9frRbyYVLg5NbJiK-eSogQ0X7dSrQaFUHSmGAeT~e-5lijwKYjPwtyr5uP4ZJTWFObaCdvFfLlTPeZKU97h60mleNKrqH5yW~7g__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1Vy7F2xsULRzIeLy1L2kyPzmcxxT5oC53/preview" crolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep43.html">1x43 - Diana cerca casa</a></h1>
 </body>
 
