--- a/DCvideos/S1Ep44.html
+++ b/DCvideos/S1Ep44.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Lotta all'ultimo uovo</h1>
-                    <iframe width="1200" height="800" src="https://d3foqyi3s64lzo.cloudfront.net/y12k20%2Ffile%2F46b804238f4f20ceb77ccf85af7533d7_351a9ce95b29788b3706ed5ee3dfe36e.mp4?response-content-disposition=inline%3Bfilename%3D%2246b804238f4f20ceb77ccf85af7533d7_351a9ce95b29788b3706ed5ee3dfe36e.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233495&Signature=DcF1nLGwi0LiDxukdKf9pPAE~dM7OJei-F1BtIowuXhoXQmwOlh7l6K7nKfPMKtOMv80nXqSwDrCA16vnSfoNO7FinNC7wdQrzVNMiR~271VLsqnVqVDs~34i-unH2r1fQAgyQfsDgY-gIgnXsSKGeboTCpZWB891OLioFb5zkFOwazZ7agqhJmLvNw12cOsbirWh5-vQeIrh9gflJnsGOCTVpjTBO8vVMeaZPnz9eGBOuiARv1OFFhciaZnR7f4BjXlvde9xqImW43FQsgASp5COd9f9CgpZlVmMzet1MtyEphmTVkfYGwIplkTd2iIZ~10N3xyCVmNlEgOwj~D8A__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1rIQ14km8qGCDIOtN8MXhmAHeMamo6U26/preview" crolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep45.html">1x45 - Cena per cinque</a></h1>
 </body>
 
