--- a/DCvideos/S1Ep45.html
+++ b/DCvideos/S1Ep45.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Cena per cinque</h1>
-                    <iframe width="1200" height="800" src="https://d1uhi8eflrpocw.cloudfront.net/g1sk20%2Ffile%2F33bc4bb83f6460a2f294d88f88bcffde_0cad5d4de0d143769b627333320f10f3.mp4?response-content-disposition=inline%3Bfilename%3D%2233bc4bb83f6460a2f294d88f88bcffde_0cad5d4de0d143769b627333320f10f3.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233595&Signature=NVc3cFn3gd2qPfgYyuAb99p-N8v~4le9R7MhpcaZo7vS6OpHB~ItUN02rVLoIEWrwMIve0hq4zm7Ay5Mb2NWjy238MrHMmWzI-wvYDZ5wURjvYUfTBuS7AH6Ilx79EEON0k4jK2ykuSBYh0WKG5OZPNIWAvSgVjfVtygN3BPUzfsuwGgv~zWObgOi2TAepzM7~VR5C5qUa62eXyQciiJEpM91AeCtFue5W8~p8Uv9KLDKNekwtf7oHSQvWbG4-kzVC6pSVDhIvBuOytClpKrjd2JkDqBBPaZ0cF7nkAWMv0ew4V~j0bfkVTCZMRYiAXyxH5zSoeTLK5gkuHFML4ttw__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/14HQ7kDe-bVkJSx-WWuD16bIl-0R_w2q7/preview" crolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep46.html">1x46 - Lo scoop degli scoop</a></h1>
 </body>
 
