--- a/DCvideos/S1Ep50.html
+++ b/DCvideos/S1Ep50.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Le acchiappafantasmi</h1>
-                    <iframe width="1200" height="800" src="https://d2o0is6348o2o4.cloudfront.net/k0vp20%2Ffile%2F804bef513ea5fdeb69b240c3cdfcc79b_02ff059d4aa26fbc9702a5efbe5a815f.mp4?response-content-disposition=inline%3Bfilename%3D%22804bef513ea5fdeb69b240c3cdfcc79b_02ff059d4aa26fbc9702a5efbe5a815f.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233725&Signature=KbPsjDAJpch4xgsYnLZ4ZJ93~FvougH3I7Gt-TDb0rPhA6Za3mlTBVLo13W2C0Neh7qoMd9~8TEFr1bHvJAEUqwwljzd5iYFFSBGWpHMqbo1VeEEXqSdstiftxCOQhxdbaGUzQK~WmNhd~UQwNGWgVHsaf4krTUTqboYqfQBbT5m0UAyy8WQHLBFpy-6vYg5deoBD7sKDAsWTX7~OWV-h8ASlg72Eo2z6chPPaBVR5KCmAHP8u5sI4Hopm8CyUzz~tVlZbCht4krGCdGlTJSgwpQ2W0p4R4ToU8Xl1bbp2nvy-G5GM8pNoN7tZuisnjGxtgoOJJpMuD14f1jg9Nlow__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1OxFGrvXuKsJUzVNGm-uO9rTsOxocxAHa/preview" crolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep51.html">1x51 - La principessa della fiera - parte 1</a></h1>
 </body>
 
