--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -11,13 +11,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <a href="https://discord.com/users/658968248594989058" style="margin-bottom: 30px";>
+    <a href="https://discord.com/users/658968248594989058">
         <img class="discord-widget" src="https://discord.c99.nl/widget/theme-4/658968248594989058.png" alt="Discord">
     </a>
 
     <h1 style="margin-bottom: 7px;"><a class="b" href="https://ru-fus.github.io/RufusWebsite/index.html">PAGINA PRINCIPALE</a></h1>
 
-    <h1 style="margin-bottom: 7px;">Sito di Streaming di Rufus</h1>
+    <h1>IMPORTANTE!</h1>
     <h3 style="margin-bottom: 10px;">
         Non voglio promuovere la pirateria, voglio solo condividere una serie che mi piace senza pubblicita' <br>
         Questo non e' un sito di streaming generico e non e' a scopo di lucro. <br>
