--- a/DCvideos/S1Ep23.html
+++ b/DCvideos/S1Ep23.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Il gatto furioso</h1>
-                    <iframe width="1200" height="800" src="https://d23j1yojw6x37d.cloudfront.net/w1fnsz%2Ffile%2Ff70086576d5a775a64f4ce2b0c746db0_fc9042bd34f065bf63e28aca3e34d30a.mp4?response-content-disposition=inline%3Bfilename%3D%22f70086576d5a775a64f4ce2b0c746db0_fc9042bd34f065bf63e28aca3e34d30a.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713220732&Signature=dSVA9StQw2Z3JvhWijXD5Kuv~qehI5aQga6CPqv7Z~JexmAzKQlfI~CShc8VJ71b5-CKwIGnAeZzZTrbCIcwzXwTTSNaoqMGVdAYV8x03bJTzFbwhKjt0YdyDq08L4fgKeSWS2RR3PoL9u3AzhPhKpDHGSUPoiubMRXcwlEFF8R5mVcIpgUQVxpEbfPaqliPWE3Sxw4seIjWCPXuNt-CQWve1ASGiC3nzT7B4qkiWnue9DhcIJCrOPcQ19i5sg6jaGgpit9c7-zEnzjyMfQX8~gfak3GNjnAEJhh0Id6EbVZbvG1wbm5ZpXznalQzq-ZeXoBTnH7SPD5S3f70G-CSQ__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1OzcdDZt4q1Lic41l-Ts_anmGNwQXQkdU/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep24.html">1x24 - Asso contro Krypto</a></h1>
 </body>
 
