--- a/DCvideos/S1Ep35.html
+++ b/DCvideos/S1Ep35.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Il potere della musica - parte 1</h1>
-                    <iframe width="1200" height="800" src="https://d8l68e4ijccbk.cloudfront.net/t2yc20%2Ffile%2F6619eb6809506f6d16631489c6dc9d6f_14d34010094e52d9cd2cbf0dfef9e288.mp4?response-content-disposition=inline%3Bfilename%3D%226619eb6809506f6d16631489c6dc9d6f_14d34010094e52d9cd2cbf0dfef9e288.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233231&Signature=YCLQ8RfykwzeNIOcUI4GH0BRBrF14HedU0jXM~yp7hNzncrOSavVB423FGzYqxirQWSNYBKmMDy0zqsoqeEdo2AWye13e~KrjV9qo1AL-Dk~cNGiytj4c3vAw~ZZfbIhcnCPKVQJ5P~8gRmxJzxSyWriQz7YCsf3iR5LEVEKq3NVdPmtc5xrjDdRidEbVr6p6iC~CFlkxnQuD9EnZcM1wCsDCl4MivPwDAarEGDGuWyh4lCVQH3zdYXz76AXjAf-UrpmwUdR2BeH0gdJ6~tC754iL1bfoPDnd~Xley~y3G7ovP7MlNIPvtC1ujpr9LL~N~UY6PITBd~BHZDYXb27qA__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1H8AEoj3iiHi-mbeRI8Jhx3zW6sbrRS2h/preview" crolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1 style="margin-bottom: 10px;">✨Min 2:12 "Troppo di moda per avere stile"✨</h1>
                 <h1><a class="a" href="S1Ep36.html">1x36 - Il potere della musica - parte 2</a></h1>
 </body>
