--- a/DCvideos/S1Ep47.html
+++ b/DCvideos/S1Ep47.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Una storia complicata</h1>
-                    <iframe width="1200" height="800" src="https://d2c4xlv4jy9bh7.cloudfront.net/g4pm20%2Ffile%2F3fca043225c115ba1b65306182a5dda6_43cf37d09d52d3f1686ff53a9fe12329.mp4?response-content-disposition=inline%3Bfilename%3D%223fca043225c115ba1b65306182a5dda6_43cf37d09d52d3f1686ff53a9fe12329.mp4%22%3B&response-content-type=video%2Fmp4&Expires=1713233657&Signature=RRpEhVUTAiuHiwB8zYCLRq4QhTS8XXqgsN2Y~DYvEU~PLBoUcZ0lW49-oZbfAVFnZKc~vfHFjB7U5tkooD~Os7SKBixNeDPZGkHeSNXB9ctXjIJuoBpqkfGfZlvePkcEJg-FUZ-E8n3F6jkBxw~ygsk7r0UIV82fFhNUkw2amv~0F4S3k1qMjrdxGmLmj5pyrNbKpTlCTpe3aW-d8lrDHDjWT-vA0SX8DHhj-9qTy0lxs85SmpQ2pHV2ScHcwwdnViqocXhiPWaMNvHqQ7CoqLdgu0iREJAHGUN0FQh6FpUvsCOmMjK72w2Y~hoKbLmNrveQurBsWU~d60tyoGJc1w__&Key-Pair-Id=APKAJT5WQLLEOADKLHBQ" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1L_4zNPvSAKLCYeOmVPVjoTdi97bmb8rn/preview" crolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S1Ep48.html">1x48 - Un amore impossibile</a></h1>
 </body>
 
