--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="Rufus logos/Rufus Black.png">
+    <link rel="shortcut icon" type="image/x-icon" href="Image.Videos/Rufus Black.png">
     <link rel="stylesheet" href="style.css">
     <title>Rufus</title>
     <meta name="title" content="Sito web ufficiale di Rufus">
@@ -53,21 +53,21 @@
     <h2 style="margin-bottom: 50px;">Download Texture di Minecraft</h2>
     
     <div id="social-icons" class="social-icons">
-        <a href="https://www.pinterest.it/ltrufus/"> <img class="logo" src="Rufus logos/Rufus Pinterest.png" alt="Pinterest"> </a>
-        <a href="https://www.youtube.com/channel/UCTibWCGsj4U4lxBC4KPm-Gw"> <img class="logo" src="Rufus logos/Rufus Youtube.png" alt="Youtube"></a>          
-        <a href="https://www.reddit.com/user/S3Npai-Rufus"> <img class="logo" src="Rufus logos/Rufus Reddit.png" alt="Reddit"></a>
-        <a href="https://soundcloud.com/yaufus"> <img class="logo" src="Rufus logos/Rufus Soundcloud.png" alt="Soundcloud"></a>
-        <a href="https://www.wattpad.com/user/LtRufus"> <img class="logo" src="Rufus logos/Rufus Wattpad.png" alt="Wattpad"></a>
-        <a href="https://www.deviantart.com/rufus7734"> <img class="logo" src="Rufus logos/Rufus Deviantart.png" alt="Deviantart"></a>
-        <a href="https://open.spotify.com/user/rufus_akashi"> <img class="logo" src="Rufus logos/Rufus Spotify.png" alt="Spotify"></a>
-        <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"> <img class="logo" src="Rufus logos/Rufus Whatsapp.png" alt="Whatsapp"></a>
-        <a href="https://t.me/ltrufus"> <img class="logo" src="Rufus logos/Rufus Telegram.png" alt="Telegram"></a>
-        <a href="https://www.instagram.com/lt.rufus/"> <img class="logo" src="Rufus logos/Rufus Instagram.png" alt="Instagram"></a>
-        <a href="https://discord.gg/QygjfvxfZ8"> <img class="logo" src="Rufus logos/Rufus Discord.png" alt="Discord"></a>
-        <a href="https://steamcommunity.com/id/LtRufus/"> <img class="logo" src="Rufus logos/Rufus Steam.png" alt="Steam"></a>
-        <a href="https://www.tiktok.com/@ltrufus"> <img class="logo" src="Rufus logos/Rufus TikTok.png" alt="TikTok"></a>
-        <a href="https://twitter.com/lt_rufus_"> <img class="logo" src="Rufus logos/Rufus Twitter.png" alt="Twitter"></a>
-        <a href="https://github.com/Ru-fus"> <img class="logo" src="Rufus logos/Rufus Github.png" alt="GitHub"></a>
+        <a href="https://www.pinterest.it/ltrufus/"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Pinterest.png" alt="Pinterest"> </a>
+        <a href="https://www.youtube.com/channel/UCTibWCGsj4U4lxBC4KPm-Gw"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Youtube.png" alt="Youtube"></a>          
+        <a href="https://www.reddit.com/user/S3Npai-Rufus"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Reddit.png" alt="Reddit"></a>
+        <a href="https://soundcloud.com/yaufus"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Soundcloud.png" alt="Soundcloud"></a>
+        <a href="https://www.wattpad.com/user/LtRufus"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Wattpad.png" alt="Wattpad"></a>
+        <a href="https://www.deviantart.com/rufus7734"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Deviantart.png" alt="Deviantart"></a>
+        <a href="https://open.spotify.com/user/rufus_akashi"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Spotify.png" alt="Spotify"></a>
+        <a href="https://whatsapp.com/channel/0029VaK4Bbc5Ejy2vDnOHU0R"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Whatsapp.png" alt="Whatsapp"></a>
+        <a href="https://t.me/ltrufus"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Telegram.png" alt="Telegram"></a>
+        <a href="https://www.instagram.com/lt.rufus/"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Instagram.png" alt="Instagram"></a>
+        <a href="https://discord.gg/QygjfvxfZ8"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Discord.png" alt="Discord"></a>
+        <a href="https://steamcommunity.com/id/LtRufus/"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Steam.png" alt="Steam"></a>
+        <a href="https://www.tiktok.com/@ltrufus"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus TikTok.png" alt="TikTok"></a>
+        <a href="https://twitter.com/lt_rufus_"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Twitter.png" alt="Twitter"></a>
+        <a href="https://github.com/Ru-fus"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Github.png" alt="GitHub"></a>
     </div>
 
     <h3 style="margin-bottom: 30px; margin-top: 30px;">Di questi uso principalmente Discord e Twitter</h3>
