--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="Image.Videos/Rufus.Logos/Rufus Black.png">
+    <link rel="shortcut icon" type="image/x-icon" href="Image.Videos/Rufus Black.png">
     <link rel="stylesheet" href="style.css">
     <title>Rufus</title>
     <meta name="title" content="Sito web ufficiale di Rufus">
