--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -83,6 +83,38 @@
         <a class="a" href="S1Ep52.html"> 1x52 - La principessa della fiera - parte 2</a> <br>
     </h3>
 
+
+    <h1 style="margin-top: 35px; margin-bottom: 35px;">2* Stagione:</h1>
+    <h3 style="margin-top: 35px; margin-bottom: 35px;">
+        <a class="a" href="S2Ep1.html">2x01 - La nuova aiutante di Batman - parte 1</a><br>
+        <a class="a" href="S2Ep2.html">2x02 - La nuova aiutante di Batman - parte 2</a><br>
+        <a class="a" href="S2Ep3.html">2x03 - Una sostituta bizzarra</a><br>
+        <a class="a" href="S2Ep4.html">2x04 - Il club di Garth</a><br>
+        <a class="a" href="S2Ep5.html">2x05 - L'auto della discordia</a><br>
+        <a class="a" href="S2Ep6.html">2x06 - La conchiglia delle sirene</a><br>
+        <a class="a" href="S2Ep7.html">2x07 - Kara sotto ipnosi</a><br>
+        <a class="a" href="S2Ep8.html">2x08 - Buon compleanno Zee!</a><br>
+        <a class="a" href="S2Ep9.html">2x09 - Il processo</a><br>
+        <a class="a" href="S2Ep10.html">2x10 - Arriva Night-Sting</a><br>
+        <a class="a" href="S2Ep11.html">2x11 - Le migliori al mondo</a><br>
+        <a class="a" href="S2Ep12.html">2x12 - Il re dei condimenti</a><br>
+        <a class="a" href="S2Ep13.html">2x13 - La rivolta dei cloni</a><br>
+        <a class="a" href="S2Ep14.html">2x14 - Le pagelle</a><br>
+        <a class="a" href="S2Ep15.html">2x15 - Senza poteri</a><br>
+        <a class="a" href="S2Ep16.html">2x16 - Il commissario supplente</a><br>
+        <a class="a" href="S2Ep17.html">2x17 - La guerriera e la giullare</a><br>
+        <a class="a" href="S2Ep18.html">2x18 - La gelosia di Diana</a><br>
+        <a class="a" href="S2Ep19.html">2x19 - Sabato in punizione</a><br>
+        <a class="a" href="S2Ep20.html">2x20 - Piccole vittorie</a><br>
+        <a class="a" href="S2Ep21.html">2x21 - Vota Cruz</a><br>
+        <a class="a" href="S2Ep22.html">2x22 - Un supereroe spericolato</a><br>
+        <a class="a" href="S2Ep23.html">2x23 - Una serata incantata</a><br>
+        <a class="a" href="S2Ep24.html">2x24 - La visita di Acquaman</a><br>
+        <a class="a" href="S2Ep25.html">2x25 - Incubo a Gotham - parte 1</a><br>
+        <a class="a" href="S2Ep26.html">2x26 - Incubo a Gotham - parte 2</a><br>
+    </h3>
+               
+
     <h1 style="margin-bottom: 6px;">DOWNLOADS</h1>
     <h2 style="margin-bottom: 6px;">Piccola sezione per chiunque volesse scaricare la serie</h2>
     <h3><a class="a"  href="https://drive.google.com/file/d/13AJFijWHfoxvs_WtHVTda0LA0vulg3FQ/view?usp=sharing"> STAGIONE 1</a></h3>
