--- a/DCvideos/S2Ep1.html
+++ b/DCvideos/S2Ep1.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La nuova aiutante di Batman - parte 1</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729210858075" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1plJYG_NFM-Q9tJMGYn_5j7obhAZuCJB5/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep2.html">2x02 - La nuova aiutante di Batman - parte 2</a></h1>
 </body>
 
