--- a/DCvideos/S2Ep10.html
+++ b/DCvideos/S2Ep10.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Arriva Night-Sting</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729210661467" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1vd5f608CSdhfmWN1oGVMwlK-lMJH-zAY/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep11.html">2x11 - Le migliori al mondo</a></h1>
 </body>
 
