--- a/DCvideos/S2Ep12.html
+++ b/DCvideos/S2Ep12.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Il re dei condimenti</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729211644507" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1h7EStr8FM4E-c_IPJfCc2eYUyfpovULo/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep13.html">2x13 - La rivolta dei cloni</a></h1>
 </body>
 
