--- a/DCvideos/S2Ep13.html
+++ b/DCvideos/S2Ep13.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La rivolta dei cloni</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729211382363" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1I2bZlDSnobUpU42ZjsGvROURt31BPcu1/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep14.html">2x14 - Le pagelle</a></h1>
 </body>
 
