--- a/DCvideos/S2Ep14.html
+++ b/DCvideos/S2Ep14.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Le pagelle</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729211316827" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/12a-VoJUwQfIDeQLwR_7pWl6ocTo18SB-/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep15.html">2x15 - Senza poteri</a></h1>
 </body>
 
