--- a/DCvideos/S2Ep15.html
+++ b/DCvideos/S2Ep15.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>2x15 - Senza poteri</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729210727003" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1YT1P64Ah6I2-R1-RGCJ4qNMQS51pifLG/preview" width="640" height="480" allow="autoplay"></iframe>
                 <h1><a class="a" href="S2Ep16.html">2x16 - Il commissario supplente</a></h1>
 </body>
 
