--- a/DCvideos/S2Ep17.html
+++ b/DCvideos/S2Ep17.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La guerriera e la giullare</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729211578971" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1H6BxiTxJeZAuq9mD24yW6UQKUgcQWKDg/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep18.html">2x18 - La gelosia di Diana</a></h1>
 </body>
 
