--- a/DCvideos/S2Ep18.html
+++ b/DCvideos/S2Ep18.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La gelosia di Diana</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729210792539" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/15EbDB6N1OsiagnCXNtOY0ZQbVvaSLso2/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep19.html">2x19 - Sabato in punizione</a></h1>
 </body>
 
