--- a/DCvideos/S2Ep19.html
+++ b/DCvideos/S2Ep19.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Sabato in punizione</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729211513435" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1ETlLKX-K33-IS1AAtLBQGhGC1A-gWnz1/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep20.html">2x20 - Piccole vittorie</a></h1>
 </body>
 
