--- a/DCvideos/S2Ep2.html
+++ b/DCvideos/S2Ep2.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La nuova aiutante di Batman - parte 2</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729211054683" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1kG1_KxVS5z3JLBvr9_5HMooiBN34W1LT/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep3.html">2x03 - Una sostituta bizzarra</a></h1>
 </body>
 
