--- a/DCvideos/S2Ep20.html
+++ b/DCvideos/S2Ep20.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Piccole vittorie</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6733477251675" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1kTc76Z8beMB5Z0eFZVhkJoVWJ-pvf2Rg/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep21.html">2x21 - Vota Cruz</a></h1>
 </body>
 
