--- a/DCvideos/S2Ep21.html
+++ b/DCvideos/S2Ep21.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Vota Cruz</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6733477055067" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1WiEjuebkrUytpWo8gHWA2Go3Qsl9_SCT/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep22.html">2x22 - Un supereroe spericolato</a></h1>
 </body>
 
