--- a/DCvideos/S2Ep22.html
+++ b/DCvideos/S2Ep22.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Un supereroe spericolato</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6733477317211" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1NQee7itSuJRQhHkss4xYSXXftbtFSltE/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep23.html">2x23 - Una serata incantata</a></h1>
 </body>
 
