--- a/DCvideos/S2Ep23.html
+++ b/DCvideos/S2Ep23.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Una serata incantata</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6733477186139" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1afI4uqn-Y3P7s1axeOZ_ZWy6i8xhT9Lc/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep24.html">2x24 - La visita di Acquaman</a></h1>
 </body>
 
