--- a/DCvideos/S2Ep24.html
+++ b/DCvideos/S2Ep24.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La visita di Acquaman</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6733476989531" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1iHVl2V_JeEJq5kp31DqcwuCrrWT5N2iV/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep25.html">2x25 - Incubo a Gotham - parte 1</a></h1>
 </body>
 
