--- a/DCvideos/S2Ep25.html
+++ b/DCvideos/S2Ep25.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Incubo a Gotham - parte 1</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6733477120603" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1NBLAtS1PqA7C0wsYodBSC0jhuFZtyEyz/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep26.html">2x26 - Incubo a Gotham - parte 2</a></h1>
 </body>
 
