--- a/DCvideos/S2Ep26.html
+++ b/DCvideos/S2Ep26.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Incubo a Gotham - parte 2</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6733476923995" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/15D5P43aROt-G5r1QQmYT8xzDB6VzH19k/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1>Sono contento che siate arrivati alla fine di questa splendida serie!</h1>
                 <h1>Fatemi sapere cosa ne pensate!</h1>
 </body>
