--- a/DCvideos/S2Ep3.html
+++ b/DCvideos/S2Ep3.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Una sostituta bizzarra</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729211447899" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1ZANHfD8rjBzglOtj2YxlyPk3p4JMXKb4/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep4.html">2x04 - Il club di Garth</a></h1>
 </body>
 
