--- a/DCvideos/S2Ep4.html
+++ b/DCvideos/S2Ep4.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Il club di Garth</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729210923611" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1YqVWtW4Rr8ocXDDEcWHC56prTVoibPkZ/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep5.html">2x05 - L'auto della discordia</a></h1>
 </body>
 
