--- a/DCvideos/S2Ep6.html
+++ b/DCvideos/S2Ep6.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>La conchiglia delle sirene</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729210530395" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1kV7mIzU2JWRaLJsRpcEanE_j4IpXMxZw/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep7.html">2x07 - Kara sotto ipnosi</a></h1>
 </body>
 
