--- a/DCvideos/S2Ep7.html
+++ b/DCvideos/S2Ep7.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Kara sotto ipnosi</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6729210595931" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1nB-PLLmCMJv33Pep5WNrBiw6SATFvwaf/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep8.html">2x08 - Buon compleanno Zee!</a></h1>
 </body>
 
