--- a/DCvideos/S2Ep8.html
+++ b/DCvideos/S2Ep8.html
@@ -15,8 +15,7 @@
 <body>
                 <a class="b" href="DCSHG.html">Elenco episodi</a>
                 <h1>Buon compleanno Zee!</h1>
-                    <iframe width="1200" height="800" src="https://ok.ru/videoembed/6730934520411" frameborder="0"
-                        allowfullscreen></iframe>
+                <iframe src="https://drive.google.com/file/d/1pk-DuIumLbVzLF68M61QZc5pEtNLcZMX/preview" scrolling="no" frameborder="0" allowfullscreen></iframe>
                 <h1><a class="a" href="S2Ep9.html">2x09 - Il processo</a></h1>
 </body>
 
