--- a/DCvideos/DCSHG.html
+++ b/DCvideos/DCSHG.html
@@ -113,12 +113,19 @@
         <a class="a" href="S2Ep25.html">2x25 - Incubo a Gotham - parte 1</a><br>
         <a class="a" href="S2Ep26.html">2x26 - Incubo a Gotham - parte 2</a><br>
     </h3>
+
+    <h1 style="margin-top: 35px;">Film:</h1>
+    <h3 style="margin-bottom: 35px;">
+        <a class="a" href="Film.html">Confusione nel Multiverso</a>
+    </h3>
                
 
     <h1 style="margin-bottom: 6px;">DOWNLOADS</h1>
     <h2 style="margin-bottom: 6px;">Piccola sezione per chiunque volesse scaricare la serie</h2>
-    <h3><a class="a"  href="https://drive.google.com/file/d/13AJFijWHfoxvs_WtHVTda0LA0vulg3FQ/view?usp=sharing"> STAGIONE 1</a></h3>
-    <h3><a class="a" style="margin-bottom: 6px;" href="https://drive.google.com/file/d/1tJLn9GbEGwOPyJgqDNQ-Nz-lHvaNHBdD/view?usp=drive_link"> STAGIONE 2</a></h3>
+    <h3><a class="a"  href="https://drive.google.com/file/d/13AJFijWHfoxvs_WtHVTda0LA0vulg3FQ/view?usp=sharing"> STAGIONE 1</a> <br>
+    <a class="a" href="https://drive.google.com/file/d/1tJLn9GbEGwOPyJgqDNQ-Nz-lHvaNHBdD/view?usp=drive_link"> STAGIONE 2</a> <br>
+    <a class="a" style="margin-bottom: 6px;" href="https://drive.google.com/file/d/19DQ7qIwbHHWmSgQfTp3h-aKQrYoQ3Kdi/view?usp=sharing"> FILM</a> <br>
+    </h3>
 
 
 </body>
