--- a/index.html
+++ b/index.html
@@ -48,9 +48,15 @@
     </a>
     
     <a href="mc.html">
-        <img class="dc" src="Image.Videos/mc/mc.png" alt="Minecraft">
+        <img class="dc" src="Image.Videos/MC/mc.png" alt="Minecraft">
     </a>
     <h2 style="margin-bottom: 50px;">Download Texture di Minecraft</h2>
+
+    <a href="https://www.wattpad.com/story/305304688-un-nuovo-inizio-lapidot?utm_source=web&utm_medium=twitter&utm_content=share_myworks&wp_uname=LtRufus">
+        <img style="margin-bottom: 10px;" class="dc" src="Image.Videos/Lapidot.png" alt="Wattpad">
+    </a>
+    <h2 style="margin-bottom: 50px;">Storia Wattpad Work-In-Progress</h2>
+
     
     <div id="social-icons" class="social-icons">
         <a href="https://www.pinterest.it/ltrufus/"> <img class="logo" src="Image.Videos/Rufus.Logos/Rufus Pinterest.png" alt="Pinterest"> </a>
@@ -97,5 +103,4 @@
     </script>
 </body>
 </html>
-
 
