--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </a>
     
     <a href="mc.html">
-        <img class="dc" src="Image.Videos/MC/mc.png" alt="Minecraft">
+        <img class="dc" src="Image.Videos/mc/mc.png" alt="Minecraft">
     </a>
     <h2 style="margin-bottom: 50px;">Download Texture di Minecraft</h2>
 
